# veriff-face-api

./: .env.example  .gitignore  README.md  Veriff Face Api.postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: e0913d3195f2_initial_migration.py
app/: config.py  database.py  face_encoding_client.py  models.py  routes.py  schemas.py  service.py
tests/: test_face_encoding_client.py
