[tool.poetry]
name = "veriff-face-api"
version = "0.1.0"
description = ""
authors = ["kaspar <kasparkruus032@gmail.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-dotenv = "^1.1.0"
httpx = "^0.28.1"
pydantic = "^2.11.4"
python-multipart = "^0.0.20"
pytest = "^8.3.5"
anyio = "^4.9.0"
pytest-asyncio = "^0.26.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^24.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
